# structureproject

./: .gitignore  CMakeLists.txt  ReadMe
Dpdd/: main.cpp
Src/: Camera.cpp  Canny.cpp  Display.cpp  Dither.cpp  GScaler.cpp  MainWindow.cpp  PerformanceMonitor.cpp  Treshold.cpp  main.cpp
include/: Camera.hpp  Canny.hpp  Display.hpp  Dither.hpp  GScaler.hpp  MainWindow.hpp  PerformanceMonitor.hpp  Treshold.hpp
